rename summary interafce and add retrieve interface of deployment
