# master/server/router/router.go
@@ -16,7 +16,7 @@ func InitRouter() *gin.Engine {
 	{
 		deploymentController := new(controller.DeploymentController)
 		api.GET("/deployment", middleware.Pagination, deploymentController.List)
-		api.GET("/deployment/summary", deploymentController.Summary)
+		api.GET("/deployment/simplist", deploymentController.SimpList)
 		api.POST("/deployment", deploymentController.Create)
 		api.PUT("/deployment/:id", deploymentController.Update)
 		api.DELETE("/deployment/:id", deploymentController.Destroy)
